data/derived/comb/progs/unify/prog7148.ml.out
Characters 84-90:
  else (n mod 10) :: return
                     ^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
